{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 47,
  "lineage": "ee7644ae-f167-dca1-1e43-6b9e7cbe2ac8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_epi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0e49f3df7f3ba8ba9",
            "domain": "vpc",
            "id": "eipalloc-089f70169f9921c6c",
            "network_interface": "eni-0bd79114017face86",
            "private_dns": "ip-10-0-4-221.eu-west-1.compute.internal",
            "private_ip": "10.0.4.221",
            "public_dns": "ec2-54-220-105-124.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.105.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-aws-eu-west-1-igw-a"
            },
            "vpc": true
          }
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-010e38fdea209b924",
            "domain": "vpc",
            "id": "eipalloc-0897db0633d6eb839",
            "network_interface": "eni-0c5b3254484e9887b",
            "private_dns": "ip-10-0-5-183.eu-west-1.compute.internal",
            "private_ip": "10.0.5.183",
            "public_dns": "ec2-63-33-97-216.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.33.97.216",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-aws-eu-west-1-igw-b"
            },
            "vpc": true
          }
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0271ff55b352da614",
            "domain": "vpc",
            "id": "eipalloc-0dac59c159b465262",
            "network_interface": "eni-0929b3ff248fafee8",
            "private_dns": "ip-10-0-6-88.eu-west-1.compute.internal",
            "private_ip": "10.0.6.88",
            "public_dns": "ec2-52-19-94-224.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.19.94.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-aws-eu-west-1-igw-c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08a902530d03bc07e",
            "owner_id": "367103758607",
            "tags": {
              "Name": "test-aws-eu-west-1-igw"
            },
            "vpc_id": "vpc-0c4f2a58cb2460a15"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-089f70169f9921c6c",
            "id": "nat-0385a96d7ae0594cb",
            "network_interface_id": "eni-0bd79114017face86",
            "private_ip": "10.0.4.221",
            "public_ip": "54.220.105.124",
            "subnet_id": "subnet-075cc5c93d568f6ed"
          },
          "dependencies": [
            "aws_eip.nat_gw_epi",
            "aws_vpc.vpc",
            "module.public_subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0897db0633d6eb839",
            "id": "nat-0629c6262af97fec0",
            "network_interface_id": "eni-0c5b3254484e9887b",
            "private_ip": "10.0.5.183",
            "public_ip": "63.33.97.216",
            "subnet_id": "subnet-0eb83cf02c9b0cd10"
          },
          "dependencies": [
            "aws_eip.nat_gw_epi",
            "aws_vpc.vpc",
            "module.public_subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dac59c159b465262",
            "id": "nat-0fb239f56486e31f4",
            "network_interface_id": "eni-0929b3ff248fafee8",
            "private_ip": "10.0.6.88",
            "public_ip": "52.19.94.224",
            "subnet_id": "subnet-0cad08a946fece084"
          },
          "dependencies": [
            "aws_eip.nat_gw_epi",
            "aws_vpc.vpc",
            "module.public_subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "route_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0be8a614269057fe21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0385a96d7ae0594cb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0be8a614269057fe2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_private",
            "aws_vpc.vpc",
            "module.public_subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07df957188e711df71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0629c6262af97fec0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07df957188e711df7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_private",
            "aws_vpc.vpc",
            "module.public_subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fc82397fd4f2ccfa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0fb239f56486e31f4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fc82397fd4f2ccfa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_nat_gateway.nat_gw",
            "aws_route_table.rt_private",
            "aws_vpc.vpc",
            "module.public_subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0be8a614269057fe2",
            "owner_id": "367103758607",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-aws-eu-west-1-a-rt"
            },
            "vpc_id": "vpc-0c4f2a58cb2460a15"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-07df957188e711df7",
            "owner_id": "367103758607",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-aws-eu-west-1-b-rt"
            },
            "vpc_id": "vpc-0c4f2a58cb2460a15"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fc82397fd4f2ccfa",
            "owner_id": "367103758607",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-aws-eu-west-1-c-rt"
            },
            "vpc_id": "vpc-0c4f2a58cb2460a15"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00734dd53fbb464b9",
            "route_table_id": "rtb-0be8a614269057fe2",
            "subnet_id": "subnet-075cc5c93d568f6ed"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_vpc.vpc",
            "module.public_subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": "2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b89ddb5bbcb52a05",
            "route_table_id": "rtb-07df957188e711df7",
            "subnet_id": "subnet-0eb83cf02c9b0cd10"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_vpc.vpc",
            "module.public_subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": "3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0feb8d866af27feb5",
            "route_table_id": "rtb-0fc82397fd4f2ccfa",
            "subnet_id": "subnet-0cad08a946fece084"
          },
          "dependencies": [
            "aws_route_table.rt_private",
            "aws_vpc.vpc",
            "module.public_subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:367103758607:vpc/vpc-0c4f2a58cb2460a15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-053349d459fcdbaa7",
            "default_route_table_id": "rtb-012da6cb1592e6bea",
            "default_security_group_id": "sg-0b7cff28c86511f8b",
            "dhcp_options_id": "dopt-eae8cf8c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c4f2a58cb2460a15",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-012da6cb1592e6bea",
            "owner_id": "367103758607",
            "tags": {
              "Name": "eu-west-1-test-aws-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.private_subnet[\"1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:367103758607:subnet/subnet-008b1c9ff462493e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-008b1c9ff462493e2",
            "map_public_ip_on_launch": false,
            "owner_id": "367103758607",
            "tags": {
              "Name": "test-aws-eu-west-1-private-a-10.0.1.0/24-subnet"
            },
            "vpc_id": "vpc-0c4f2a58cb2460a15"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet[\"2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:367103758607:subnet/subnet-0b7b394e3f0085a2e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b7b394e3f0085a2e",
            "map_public_ip_on_launch": false,
            "owner_id": "367103758607",
            "tags": {
              "Name": "test-aws-eu-west-1-private-b-10.0.2.0/24-subnet"
            },
            "vpc_id": "vpc-0c4f2a58cb2460a15"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet[\"3\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:367103758607:subnet/subnet-0188e6bd1e6ecb52b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0188e6bd1e6ecb52b",
            "map_public_ip_on_launch": false,
            "owner_id": "367103758607",
            "tags": {
              "Name": "test-aws-eu-west-1-private-c-10.0.3.0/24-subnet"
            },
            "vpc_id": "vpc-0c4f2a58cb2460a15"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet[\"1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:367103758607:subnet/subnet-075cc5c93d568f6ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-075cc5c93d568f6ed",
            "map_public_ip_on_launch": true,
            "owner_id": "367103758607",
            "tags": {
              "Name": "test-aws-eu-west-1-public-a-10.0.4.0/24-subnet"
            },
            "vpc_id": "vpc-0c4f2a58cb2460a15"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet[\"2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:367103758607:subnet/subnet-0eb83cf02c9b0cd10",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0eb83cf02c9b0cd10",
            "map_public_ip_on_launch": true,
            "owner_id": "367103758607",
            "tags": {
              "Name": "test-aws-eu-west-1-public-b-10.0.5.0/24-subnet"
            },
            "vpc_id": "vpc-0c4f2a58cb2460a15"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet[\"3\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:367103758607:subnet/subnet-0cad08a946fece084",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0cad08a946fece084",
            "map_public_ip_on_launch": true,
            "owner_id": "367103758607",
            "tags": {
              "Name": "test-aws-eu-west-1-public-c-10.0.6.0/24-subnet"
            },
            "vpc_id": "vpc-0c4f2a58cb2460a15"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}